# SomeSDL3

./: .gitignore  CMakeLists.txt  README.md  entry.c  setup.sh
include/: Control.h  Gameplay.h  User_Interface.h  Vector.h  datatype.h  defs.h
include/lib/: API.h  math.h
lib/: SDL_Stuff.c  math.c
src/: Gameplay.c  User_Interface.c  Vector.c
